@@ -1544,6 +1544,17 @@
       </component>
     </version>
   </module>
+  <module name="jamboree">
+    <version release="gnome-2.6">
+      <component name="jamboree" dir="jamboree" group="extras">
+        <podir dir="po"/>
+        <potname name="jamboree.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="libbonobo">
     <version release="gnome-2.4">
       <component name="libbonobo" dir="libbonobo" group="developer-libs">
