@@ -1,3 +1,7 @@
+2003-10-11  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added jamboree.
+
 2003-10-08  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: bug-buddy has been branched.
